# llvm-project-legacy

clang/: CMakeLists.txt  LLVMBuild.txt
clang-tools-extra/clang-apply-replacements/tool/: CMakeLists.txt
clang-tools-extra/clang-modernize/tool/: CMakeLists.txt
clang-tools-extra/test/clang-tidy/: arg-comments.cpp  check_clang_tidy.py  google-explicit-constructor.cpp  google-explicit-make-pair.cpp  google-member-string-references.cpp  google-memset-zero-length.cpp  google-overloaded-unary-and.cpp  google-readability-casting.c  google-readability-casting.cpp  google-readability-namespace-comments.cpp  google-readability-todo.cpp  google-runtime-int.cpp  llvm-include-order.cpp  llvm-twine-local.cpp  misc-assert-side-effect.cpp  misc-assign-operator-signature.cpp  misc-bool-pointer-implicit-conversion.cpp  misc-inaccurate-erase.cpp  misc-inefficient-algorithm.cpp  misc-macro-parentheses.cpp  misc-noexcept-move-constructor.cpp  misc-repeated-side-effects-in-macro.c  misc-static-assert.cpp  misc-swapped-arguments.cpp  misc-undelegated-constructor.cpp  misc-uniqueptr-reset-release.cpp  misc-unused-alias-decls.cpp  misc-unused-parameters.c  misc-unused-parameters.cpp  misc-unused-raii.cpp  misc-use-override-cxx98.cpp  misc-use-override.cpp  modernize-loop-convert-basic.cpp  modernize-loop-convert-extra.cpp  modernize-loop-convert-negative.cpp  modernize-pass-by-value.cpp  modernize-use-nullptr-basic.cpp  modernize-use-nullptr.cpp  readability-braces-around-statements-few-lines.cpp  readability-braces-around-statements-same-line.cpp  (+13 more)
clang-tools-extra/unittests/clang-apply-replacements/: CMakeLists.txt
clang-tools-extra/unittests/clang-modernize/: CMakeLists.txt
clang-tools-extra/unittests/clang-query/: CMakeLists.txt
clang-tools-extra/unittests/clang-tidy/: CMakeLists.txt
clang/examples/: CMakeLists.txt
clang/examples/PrintFunctionNames/: CMakeLists.txt
clang/examples/analyzer-plugin/: CMakeLists.txt
clang/examples/clang-interpreter/: CMakeLists.txt
clang/lib/: CMakeLists.txt  LLVMBuild.txt
clang/lib/ARCMigrate/: CMakeLists.txt  LLVMBuild.txt
clang/lib/AST/: CMakeLists.txt  LLVMBuild.txt
clang/lib/ASTMatchers/: CMakeLists.txt  LLVMBuild.txt
clang/lib/Analysis/: CMakeLists.txt  LLVMBuild.txt
clang/lib/Basic/: CMakeLists.txt  LLVMBuild.txt  Targets.cpp
clang/lib/CodeGen/: CMakeLists.txt  (+1 more)
clang/lib/Rewrite/Frontend/: CMakeLists.txt
clang/lib/Serialization/: CMakeLists.txt  LLVMBuild.txt
clang/lib/StaticAnalyzer/Frontend/: CMakeLists.txt  LLVMBuild.txt
clang/test/: lit.cfg
clang/tools/: CMakeLists.txt  LLVMBuild.txt
clang/unittests/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
dragonegg/: CMakeLists.txt  Makefile  llvm-backend.cpp  llvm-convert.cpp
dragonegg/src/: Backend.cpp  ConstantConversion.cpp  Convert.cpp  TypeConversion.cpp
lldb/tools/: Makefile
llvm/: CMakeLists.txt  configure
llvm/autoconf/: configure.ac
llvm/docs/: CMake.rst
llvm/tools/: LLVMBuild.txt
(+92 files in other folders)
